thank you page spacing fix

--- a/public/assets/scss/partials/_content.scss
+++ b/public/assets/scss/partials/_content.scss
@@ -5027,3 +5027,8 @@ body.farmers-open {
     }
   }
 }
+
+.sv-thankyou-image {
+  height: 500px;
+  margin-bottom: -60px;
+}
